@@ -1,5 +1,7 @@
-Changes in QMPlay2 build 15.11.19:
-    - HEVC decoding in VDPAU,
+Changes in QMPlay2 build 15.11.29:
+    - improve QOpenGLWidget performance (Qt5 only, not used by default),
+    - support for HEVC decoding in VDPAU,
+    - fix decoding BINK Video,
 
 Changes in QMPlay2 build 15.10.18:
 	- new OpenGL 2 module (with OpenGL|ES 2.0 support) replaces the old OpenGL module,
